--- a/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,36 @@
         <servlet-name>jsp</servlet-name>
         <servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>zkLoader</servlet-name>
+        <servlet-class>
+            org.zkoss.zk.ui.http.DHtmlLayoutServlet
+        </servlet-class>
+        <init-param>
+            <param-name>update-uri</param-name>
+            <param-value>/zkau</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+ 
+    <servlet>
+        <servlet-name>auEngine</servlet-name>
+        <servlet-class>
+            org.zkoss.zk.au.http.DHtmlUpdateServlet
+        </servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>zkLoader</servlet-name>
+        <url-pattern>*.zul</url-pattern>
+        <url-pattern>/hello.zul</url-pattern>
+    </servlet-mapping>
+ 
+    <servlet-mapping>
+        <servlet-name>auEngine</servlet-name>
+        <url-pattern>/zkau/*</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>jsp</servlet-name>
