--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -1,60 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <name>Stitch galaxy project</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
+	<name>Stitch galaxy project</name>
 
-    <artifactId>stitchgalaxy</artifactId>
-    <groupId>com.stitchgalaxy</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+	<artifactId>stitchgalaxy</artifactId>
+	<groupId>com.stitchgalaxy</groupId>
+	<version>1.0.0-SNAPSHOT</version>
 
-    <modules>
-        <module>design_manager</module>
-        <module>design_builder</module>
-        <module>sg-rest-api</module>
-        <module>sg-manager-web</module>
-        <module>sg-common</module>
-	<module>sg-cdn</module>
-  </modules>
-    
-    <properties>
-        <sg-common-version>1.0.0-SNAPSHOT</sg-common-version>
-	<sg-cdn-version>1.0.0-SNAPSHOT</sg-cdn-version>
-        <sg-manager-web-version>1.0.0-SNAPSHOT</sg-manager-web-version>
-        <joda-version>2.3</joda-version>
-        <joda-time-hibernate-version>1.3</joda-time-hibernate-version>
-        <jadira-version>3.0.0.CR1</jadira-version>
-        <junit-version>4.10</junit-version>
-        <javaee-web-api-version>6.0</javaee-web-api-version>
-        <jsp-api-version>2.1</jsp-api-version>
-        <commons-lang3-version>3.0</commons-lang3-version>
-        <jstl-version>1.2</jstl-version>
-        <taglibs-version>1.1.2</taglibs-version>
-        <dozer-version>5.4.0</dozer-version>
-        <spring-version>4.0.0.RELEASE</spring-version>
-        <spring-security-version>3.2.1.RELEASE</spring-security-version>
-        <commons-dbcp-version>1.4</commons-dbcp-version>
-        <spring-hibernate3-version>2.0.8</spring-hibernate3-version>
-        <hsqldb-version>1.8.0.10</hsqldb-version>
-        <jta-version>1.1</jta-version>
-        <hibernate-version>4.3.1.Final</hibernate-version>
-        <zk-version>3.1</zk-version>
-    </properties>
-    
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.stitchgalaxy</groupId>
-                <artifactId>sg-common</artifactId>
-                <version>${sg-common-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.stitchgalaxy</groupId>
-                <artifactId>sg-cdn</artifactId>
-                <version>${sg-cdn-version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<modules>
+		<module>design_builder</module>
+		<module>sg-manager-web</module>
+		<module>sg-common</module>
+		<module>sg-cdn</module>
+	</modules>
 
-    
+	<properties>
+		<sg-common-version>1.0.0-SNAPSHOT</sg-common-version>
+		<sg-cdn-version>1.0.0-SNAPSHOT</sg-cdn-version>
+		<sg-manager-web-version>1.0.0-SNAPSHOT</sg-manager-web-version>
+		<joda-version>2.3</joda-version>
+		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
+		<jadira-version>3.0.0.CR1</jadira-version>
+		<junit-version>4.10</junit-version>
+		<javaee-web-api-version>6.0</javaee-web-api-version>
+		<jsp-api-version>2.1</jsp-api-version>
+		<commons-lang3-version>3.0</commons-lang3-version>
+		<jstl-version>1.2</jstl-version>
+		<taglibs-version>1.1.2</taglibs-version>
+		<dozer-version>5.4.0</dozer-version>
+		<spring-version>4.0.0.RELEASE</spring-version>
+		<spring-security-version>3.2.1.RELEASE</spring-security-version>
+		<commons-dbcp-version>1.4</commons-dbcp-version>
+		<spring-hibernate3-version>2.0.8</spring-hibernate3-version>
+		<hsqldb-version>1.8.0.10</hsqldb-version>
+		<jta-version>1.1</jta-version>
+		<hibernate-version>4.3.1.Final</hibernate-version>
+		<zk-version>3.1</zk-version>
+	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.stitchgalaxy</groupId>
+				<artifactId>sg-common</artifactId>
+				<version>${sg-common-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.stitchgalaxy</groupId>
+				<artifactId>sg-cdn</artifactId>
+				<version>${sg-cdn-version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
 </project>
