--- a/Java/sg-manager-api/src/main/webapp/WEB-INF/web.xml
+++ b/Java/sg-manager-api/src/main/webapp/WEB-INF/web.xml
@@ -12,32 +12,12 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <filter>
-        <filter-name>CORSFilter</filter-name>
-        <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
-
-        <init-param>
-            <param-name>cors.allowOrigin</param-name>
-            <param-value>*</param-value>
-            <param-name>cors.supportedMethods</param-name>
-            <param-value>GET, HEAD, POST, PUT, DELETE, OPTIONS</param-value>
-            <param-name>cors.supportedHeaders</param-name>
-            <param-value>Accept, Origin, X-Requested-With, Content-Type, Last-Modified, Authorization</param-value>
-            <param-name>cors.supportsCredentials</param-name>
-            <param-value>false</param-value>
-        </init-param>
-    </filter>
     
     <!-- Spring security -->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-    
-    <filter-mapping>
-        <filter-name>CORSFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
     
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
@@ -59,6 +39,10 @@
             <param-value>
                 /WEB-INF/spring/spring-mvc-dispatcher-servlet.xml
             </param-value>
+        </init-param>
+        <init-param>
+            <param-name>dispatchOptionsRequest</param-name>
+            <param-value>true</param-value>
         </init-param>
     </servlet>
 
