--- a/Java/sg-manager/bower.json
+++ b/Java/sg-manager/bower.json
@@ -7,6 +7,8 @@
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
-    "angular-base64": "2.0.1"
+    "angular-base64": "2.0.1",
+    "jquery": "~1.11.0",
+    "bootstrap": "~3.0.3"
   }
 }
