--- a/Java/sg-manager/package.json
+++ b/Java/sg-manager/package.json
@@ -4,11 +4,13 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-bower-install": "~1.0.0",
     "grunt-newer": "~0.6.1",
     "grunt-contrib-jshint": "~0.7.1",
     "jshint-stylish": "~0.1.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-compass": "~0.7.2",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1"
   },
