--- a/Java/sg-manager/bower.json
+++ b/Java/sg-manager/bower.json
@@ -9,6 +9,7 @@
     "angular-route": "1.2.15",
     "angular-base64": "2.0.1",
     "jquery": "~1.11.0",
-    "bootstrap": "~3.0.3"
+    "bootstrap": "~3.0.3",
+    "underscore": "1.5.0"
   }
 }
