--- a/Java/sg-data/pom.xml
+++ b/Java/sg-data/pom.xml
@@ -12,7 +12,7 @@
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-libraries-version>3.2.9.RELEASE</spring-libraries-version>
+        <spring-libraries-version>4.0.6.RELEASE</spring-libraries-version>
         <joda-version>2.3</joda-version>
         <junit-version>4.10</junit-version>
     </properties>
@@ -37,6 +37,16 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time-hibernate</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.2.0.GA</version>
         </dependency>
         <!--jpa-->
         <dependency>
