--- a/Java/sg-common/pom.xml
+++ b/Java/sg-common/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
-            <version>${jadira-version}</version>
+            <version>${usertype.core-version}</version>
         </dependency>
         <dependency>
             <groupId>net.sf.dozer</groupId>
