--- a/Java/sg-data/pom.xml
+++ b/Java/sg-data/pom.xml
@@ -12,9 +12,6 @@
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-libraries-version>4.0.6.RELEASE</spring-libraries-version>
-        <joda-version>2.3</joda-version>
-        <junit-version>4.10</junit-version>
     </properties>
     
     <dependencies>
@@ -29,7 +26,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring-libraries-version}</version>
+            <version>${spring-version}</version>
             <scope>test</scope>
         </dependency>
         <!--datetime utils-->
@@ -41,74 +38,74 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time-hibernate</artifactId>
-            <version>1.3</version>
+            <version>${joda-time-hibernate-version}</version>
         </dependency>
         <dependency>
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
-            <version>3.2.0.GA</version>
+            <version>${usertype.core-version}</version>
         </dependency>
         <!--orm-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.6.Final</version>
+            <version>${hibernate-version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.6.Final</version>
+            <version>${hibernate-version}</version>
         </dependency>
         <!--spring-->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>1.6.1.RELEASE</version>
+            <version>${spring-data-jpa-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>1.1.4.RELEASE</version>
+            <version>${spring-boot-starter-data-jpa-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring-libraries-version}</version>
+            <version>${spring-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>${spring-libraries-version}</version>
+            <version>${spring-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring-libraries-version}</version>
+            <version>${spring-version}</version>
         </dependency>
         <!--logging-->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j-version}</version>
             <scope>runtime</scope>
         </dependency>
         <!--datasources-->
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <version>${commons-dbcp-version}</version>
         </dependency>
         <!--jdbc drivers-->
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>1.8.0.10</version>
+            <version>${hsqldb-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.31</version>
+            <version>${mysql-connector-java-version}</version>
         </dependency>
     </dependencies>
 </project>
