--- a/Java/sg-data/src/test/resources/com.stitchgalaxy.domain.persistence.jpa.properties
+++ b/Java/sg-data/src/test/resources/com.stitchgalaxy.domain.persistence.jpa.properties
@@ -10,4 +10,6 @@ jdbc.username=root
 jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+hibernate.show_sql = true
+hibernate.format_sql = true
 hibernate.hbm2ddl.auto=create-drop
