--- a/Java/sg-rest-api/pom.xml
+++ b/Java/sg-rest-api/pom.xml
@@ -58,8 +58,8 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
