--- a/sg/sg-rest-api/src/main/resources/com.stitchgalaxy.domain.persistence.jpa.properties
+++ b/sg/sg-rest-api/src/main/resources/com.stitchgalaxy.domain.persistence.jpa.properties
@@ -1,15 +1,15 @@
-#jdbc.url=jdbc:hsqldb:file:stitchgalaxydb
-#jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.username=sa
-#jdbc.password=
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
-
-jdbc.url=jdbc:mysql://localhost:3306/sg
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:google:mysql://helical-analogy-659:sg/sg
+jdbc.driverClassName=com.mysql.jdbc.GoogleDriver
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
+
+#jdbc.url=jdbc:mysql://localhost:3306/sg
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.username=root
+#jdbc.password=root
+
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 hibernate.show_sql = true
 hibernate.format_sql = true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
