--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
         </init-param>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>com.sg.sg_rest_api.configuration.WebConfig</param-value>
+            <param-value>com.sg.sg_rest_api.configuration.WebApplicationContext</param-value>
         </init-param>
     </servlet>
 
