--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,32 @@
         <filter-name>logRequestFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <!-- CORS filter -->
+    <filter>
+        <filter-name>corsFilter</filter-name>
+        <filter-class>com.sg.sg_rest_api.filters.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>corsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--Spring security-->
+<!--    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath*:/WEB-INF/spring/spring-security.xml
+        </param-value>
+    </context-param>-->
+<!--    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
 
-    
+    <!--Servlet-->
     <servlet>
         <servlet-name>mvcServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
