--- a/sg/sg-rest-api/pom.xml
+++ b/sg/sg-rest-api/pom.xml
@@ -91,6 +91,21 @@
             <artifactId>spring-security-config</artifactId>           
             <version>${spring-security-version}</version> 
         </dependency>
+<!--        <dependency> 
+            <groupId>org.springframework.javaconfig</groupId> 
+            <artifactId>spring-javaconfig</artifactId>           
+            <version>1.0.0.m3</version> 
+        </dependency>-->
+<!--        <dependency> 
+            <groupId>org.springframework</groupId> 
+            <artifactId>spring-context</artifactId>           
+            <version>4.0.6.RELEASE</version> 
+        </dependency>
+        <dependency> 
+            <groupId>org.springframework</groupId> 
+            <artifactId>spring-context-support</artifactId>           
+            <version>4.0.6.RELEASE</version> 
+        </dependency>-->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
