--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,39 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+    <!-- Java based root context configuration -->
+    <context-param>
+        <param-name>contextClass</param-name>
+        <!--        <param-value>org.springframework.config.java.context.JavaConfigWebApplicationContext</param-value>-->
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>com.sg.sg_rest_api.configuration.WebApplicationContext</param-value>
+    </context-param>
+    <!-- Root web application context -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    
+    <!-- MVC servlet -->
+    <servlet>
+        <servlet-name>mvcServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- Java based context configuration -->
+        <init-param>
+            <param-name>contextClass</param-name>
+            <!--<param-value>org.springframework.config.java.context.JavaConfigWebApplicationContext</param-value>-->
+            <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.sg.sg_rest_api.configuration.ServletContext</param-value>
+        </init-param>
+    </servlet>
+
+    
     <!-- Log request filter -->
     <filter>
         <filter-name>logRequestFilter</filter-name>
@@ -22,14 +55,8 @@
         <filter-name>corsFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <!--Spring security-->
-<!--    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>
-            classpath*:/WEB-INF/spring/spring-security.xml
-        </param-value>
-    </context-param>-->
-<!--    <filter>
+    <!-- Spring security -->
+    <!--    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
@@ -37,23 +64,8 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>-->
-
-    <!--Servlet-->
-    <servlet>
-        <servlet-name>mvcServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextClass</param-name>
-            <param-value>
-                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-            </param-value>
-        </init-param>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>com.sg.sg_rest_api.configuration.WebApplicationContext</param-value>
-        </init-param>
-    </servlet>
-
+    
+    <!-- Servlet mappings -->
     <servlet-mapping>
         <servlet-name>mvcServlet</servlet-name>
         <url-pattern>/*</url-pattern>
