--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -56,14 +56,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!-- Spring security -->
-<!--    <filter>
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
     
     <!-- Servlet mappings -->
     <servlet-mapping>
