--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -26,7 +26,7 @@
 		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
 		<hibernate-version>4.3.6.Final</hibernate-version>
                 <commons-dbcp-version>1.4</commons-dbcp-version>
-                <hsqldb-version>1.8.0.10</hsqldb-version>
+                <hsqldb-version>2.3.2</hsqldb-version>
                 <mysql-connector-java-version>5.1.31</mysql-connector-java-version>
                 <log4j-version>1.2.17</log4j-version>
                 <usertype.core-version>3.2.0.GA</usertype.core-version>
@@ -40,6 +40,8 @@
                 <jasypt-version>1.9.2</jasypt-version>
                 <orika-core-version>1.4.5</orika-core-version>
                 <commons-lang3-version>3.3.2</commons-lang3-version>
+                <hibernate-validator-version>5.1.2.Final</hibernate-validator-version>
+                <javax.el-api-version>3.0.0</javax.el-api-version>
   </properties>
 
 	<dependencyManagement>
