--- a/sg/sg-domain/pom.xml
+++ b/sg/sg-domain/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate-version}</version>
         </dependency>
+        <!--validations-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>${javax.el-api-version}</version>
+        </dependency>
         <!--spring-->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -97,7 +108,7 @@
         </dependency>
         <!--jdbc drivers-->
         <dependency>
-            <groupId>hsqldb</groupId>
+            <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>${hsqldb-version}</version>
             <scope>test</scope>
