--- a/sg/sg-rest-api/src/main/resources/com/sg/configuration/properties/dev/domain.jpa.properties
+++ b/sg/sg-rest-api/src/main/resources/com/sg/configuration/properties/dev/domain.jpa.properties
@@ -7,4 +7,4 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 hibernate.show_sql = true
 hibernate.format_sql = true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
