--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -10,7 +10,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <appengine.target.version>1.9.7</appengine.target.version>
 
+                <sg-configuration-version>1.0.0-SNAPSHOT</sg-configuration-version>
                 <sg-domain-version>1.0.0-SNAPSHOT</sg-domain-version>
+                <sg-rest-api-version>1.0.0-SNAPSHOT</sg-rest-api-version>
 
 		<spring-version>4.0.6.RELEASE</spring-version>
                 <spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
@@ -45,8 +47,19 @@
 		<dependencies>
                         <dependency>
 				<groupId>com.sg</groupId>
+				<artifactId>sg-configuration</artifactId>
+				<version>${sg-configuration-version}</version>
+			</dependency>
+                        <dependency>
+				<groupId>com.sg</groupId>
 				<artifactId>sg-domain</artifactId>
 				<version>${sg-domain-version}</version>
+			</dependency>
+                        <dependency>
+				<groupId>com.sg</groupId>
+				<artifactId>sg-rest-api</artifactId>
+				<version>${sg-rest-api-version}</version>
+                                <type>war</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -64,6 +77,7 @@
       </pluginManagement>
   </build>
   <modules>
+    <module>sg-configuration</module>
     <module>sg-ear</module>
     <module>sg-domain</module>
     <module>sg-rest-api</module>
