--- a/sg/sg-domain/pom.xml
+++ b/sg/sg-domain/pom.xml
@@ -15,6 +15,10 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>com.sg</groupId>
+            <artifactId>sg-configuration</artifactId>
+        </dependency>
         <!--testing framework-->
         <dependency>
             <groupId>junit</groupId>
