--- a/sg/sg-rest-api/pom.xml
+++ b/sg/sg-rest-api/pom.xml
@@ -57,6 +57,10 @@
         <!--project dependencies-->
         <dependency>
             <groupId>com.sg</groupId>
+            <artifactId>sg-configuration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sg</groupId>
             <artifactId>sg-domain</artifactId>
         </dependency>
         <!-- Spring -->
