--- a/sg/sg-rest-integ-test/pom.xml
+++ b/sg/sg-rest-integ-test/pom.xml
@@ -15,6 +15,10 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>com.sg</groupId>
+            <artifactId>sg-configuration</artifactId>
+        </dependency>
         <!--Common stuff-->
         <dependency>
             <groupId>com.sg</groupId>
@@ -65,7 +69,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <skipTests>${skipTests}</skipTests>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
